<resources>
    <string name="app_name">AASSL</string>
    <string name="app_name_long">Accident Assessment System for Saving Lives</string>
    <string name="empty_msg">There\'s neither new accidents reported to app nor past ones.\n\nAny new accidents will appear here</string>
    <string name="old_accident_at">Old Accident at</string>
    <string name="new_accident_at">New Accident at</string>
    <string name="lng">Lng:</string>
    <string name="lat">Lat:</string>
    <string name="accident_details">Accident Details</string>
    <string name="accident_time">Accident Time</string>
    <string name="accident_coords">Coordinates</string>
    <string name="view_location_on_map">View Location on Map</string>
    <string name="new_accident_happened">New Accident Happened</string>
    <string name="time_and_location">Time and Location</string>
    <string name="car_info">Car Info</string>
    <string name="car_id">Car Chassis ID</string>
    <string name="car_model">Car Model</string>
    <string name="car_owner">Car Owner</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="maps_not_installed">Maps app isn\'t installed</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="add_accident_manually">Report Accident Manually</string>
</resources>