<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/app_name_long"
    android:orientation="vertical"
    android:theme="@style/Theme.AASSL">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/material_dynamic_primary50"
        app:title="@string/accident_details"
        app:titleCentered="true"
        app:titleTextColor="@color/material_dynamic_primary50" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <VideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_video_downloader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="100"
            android:min="0"
            android:progress="0"
            app:indicatorColor="@color/material_dynamic_primary50"
            app:indicatorDirectionCircular="clockwise"
            app:indicatorSize="80dp"
            app:trackColor="@color/material_dynamic_primary99"
            app:trackCornerRadius="10dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_progress_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:text="---%"
            android:textColor="@color/material_dynamic_primary50"
            android:textSize="16sp"
            android:textStyle="bold"
            app:fontFamily="monospace" />

    </RelativeLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/accident_details"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
        android:textColor="@color/material_dynamic_secondary30"
        android:textSize="13sp" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <ImageView
            android:id="@+id/ic1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:contentDescription="Accident Time"
            android:src="@drawable/ic_clock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/material_dynamic_secondary30"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/accident_time"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/material_dynamic_secondary30"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/ic1"
            app:layout_constraintStart_toEndOf="@id/ic1"
            app:layout_constraintTop_toTopOf="@id/ic1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_accident_time"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical|end"
            android:text="04 Mar 2023 10:38:42 PM"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/material_dynamic_primary50"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/ic1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/t1"
            app:layout_constraintTop_toTopOf="@id/ic1"
            tools:ignore="HardcodedText" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp">

        <ImageView
            android:id="@+id/ic2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:contentDescription="Accident Time"
            android:src="@drawable/ic_location"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/material_dynamic_secondary30"
            tools:ignore="HardcodedText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/accident_coords"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/material_dynamic_secondary30"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/ic2"
            app:layout_constraintStart_toEndOf="@id/ic2"
            app:layout_constraintTop_toTopOf="@id/ic2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_accident_loc"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="Lat: 25.0245\nLng: 31.1878"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/material_dynamic_primary50"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_show_loc"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/view_location_on_map"
        app:backgroundTint="@color/material_dynamic_primary50"
        app:layout_constraintTop_toBottomOf="@id/div2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/div2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent" />

</LinearLayout>